# iced_palette

./: .gitignore  Cargo.toml
src/: command.rs  helpers.rs  lib.rs  palette.rs  search.rs  subscription.rs
