[package]
name = "iced_palette"
version = "0.1.0"
edition = "2024"
description = "A command palette widget for Iced applications with fuzzy search"
license = "MIT"
repository = "https://github.com/tuco86/iced_palette"

[dependencies]
iced = { version = "0.14", features = ["advanced"] }
iced_widget = { version = "0.14" }
